tests/baselines/reference/genericArrayWithoutTypeAnnotation.errors.txt
tests/cases/compiler/genericArrayWithoutTypeAnnotation.ts(4,24): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericArrayWithoutTypeAnnotation.ts (1 errors) ====
    interface IFoo<T>{
    }
    class Bar {
        public getBar(foo: IFoo[]) {
                           ~~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        }
    }
    